--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </script>
     <script type="text/javascript">
         (function () {
-            emailjs.init("alH3Wvr2IdWBJTkmm");
+            emailjs.init("cqcvl9qqHCmehBGLg");
         })();
     </script>
 </head>
@@ -500,7 +500,7 @@
                 from_name: `${form.elements['name'].value} | ${form.elements['phone'].value} | ${form.elements['email'].value}`,
                 message: form.elements['message'].value
             };
-            emailjs.send("service_7numwe5", "template_v2rnucv", templateParams)
+            emailjs.send("service_9qs2s0m", "template_fl3w6cy", templateParams)
                 .then(function (response) {
                     alert("Congratulations ! Your request sent Successfully !");
                     // Optionally, you can reset the form after successful submission
