--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Sure Improvement</title>
+    <meta name="description"
+        content="Unlock quality education with personalized one-to-one classes for students. Explore a diverse range of courses and expert instructors to enhance your learning experience.">
+    <meta name="keywords"
+        content="online education, one-to-one classes, quality education, personalized learning, online courses">
+    <meta name="author" content="Your Website Name">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+
+    <!-- Open Graph meta tags for social media sharing -->
+    <meta property="og:title" content="Sure Improvement - Quality Online Education and One-to-One Classes">
+    <meta property="og:description"
+        content="Unlock quality education with personalized one-to-one classes for students. Explore a diverse range of courses and expert instructors to enhance your learning experience.">
+    <meta property="og:image" content="/assets/img/logo.png">
+    <meta property="og:url" content="sureimprovement.online">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card meta tags for Twitter sharing -->
+    <meta name="twitter:card" content="./assets/img/logo.png">
+    <meta name="twitter:title" content="Sure Improvement - Quality Online Education and One-to-One Classes">
+    <meta name="twitter:description"
+        content="Unlock quality education with personalized one-to-one classes for students. Explore a diverse range of courses and expert instructors to enhance your learning experience.">
+    <meta name="twitter:image" content="./assets/img/logo.png">
+    <title>Sure Improvement - Quality Online Education and One-to-One Classes</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
@@ -435,15 +454,12 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row set-row-pad">
-            <div class="col-lg-4 col-md-4 col-sm-4   col-lg-offset-1 col-md-offset-1 col-sm-offset-1 "
-                data-scroll-reveal="enter from the bottom after 0.4s">
-
-                <h2><strong>Our Location </strong></h2>
+    <div id="details-sec">
+        <div class="row text-center">
+            <div class="col-lg-12 col-md-12" data-scroll-reveal="enter from the bottom after 0.4s">
+                <h2><strong>Our Contacts and Details </strong></h2>
                 <hr />
                 <div>
-                    <h4>Delhi</h4>
                     <h4>New Delhi</h4>
                     <a href="tel:+917834819690">
                         <h4><strong>Call:</strong> +91 7834819690 </h4>
@@ -451,24 +467,11 @@
                     <a href="tel:+917254880990">
                         <h4><strong>Call:</strong> +91 7254880990 </h4>
                     </a>
-                    <a href="mailto:sureimprovement.online@gmail.com">
-                        <h4><strong>Email: </strong>sureimprovement.online@gmail.com</h4>
+                    <a href="mailto:contact@sureimprovement.online">
+                        <h4><strong>Email: </strong>contact@sureimprovement.online</h4>
                     </a>
                 </div>
             </div>
-            <!-- <div class=" col-lg-4 col-md-4 col-sm-4 col-lg-offset-1 col-md-offset-1 col-sm-offset-1"
-                data-scroll-reveal="enter from the bottom after 0.4s">
-
-                <h2><strong>Social Conectivity </strong></h2>
-                <hr />
-                <div>
-                    <a href="#"> <img src="assets/img/Social/facebook.png" alt="" /> </a>
-                    <a href="#"> <img src="assets/img/Social/google-plus.png" alt="" /></a>
-                    <a href="#"> <img src="assets/img/Social/twitter.png" alt="" /></a>
-                </div>
-            </div> -->
-
-
         </div>
     </div>
     <!-- CONTACT SECTION END-->
