--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="description"
-        content="Unlock quality education with personalized one-to-one classes for students. Explore a diverse range of courses and expert instructors to enhance your learning experience.">
-    <meta name="keywords"
-        content="online education, one-to-one classes, quality education, personalized learning, online courses">
-    <meta name="author" content="Your Website Name">
-    <meta name="robots" content="index, follow">
-    <meta name="googlebot" content="index, follow">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Open Graph meta tags for social media sharing -->
     <meta property="og:title" content="Sure Improvement - Quality Online Education and One-to-One Classes">
