--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <meta property="og:title" content="Sure Improvement - Quality Online Education and One-to-One Classes">
     <meta property="og:description"
         content="Unlock quality education with personalized one-to-one classes for students. Explore a diverse range of courses and expert instructors to enhance your learning experience.">
-    <meta property="og:image" content="/assets/img/logo.png">
+    <meta property="og:image" content="https://sureimprovement.online/assets/img/logo.png">
     <meta property="og:url" content="sureimprovement.online">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card meta tags for Twitter sharing -->
-    <meta name="twitter:card" content="./assets/img/logo.png">
+    <meta name="twitter:card" content="https://sureimprovement.online/assets/img/logo.png">
     <meta name="twitter:title" content="Sure Improvement - Quality Online Education and One-to-One Classes">
     <meta name="twitter:description"
         content="Unlock quality education with personalized one-to-one classes for students. Explore a diverse range of courses and expert instructors to enhance your learning experience.">
-    <meta name="twitter:image" content="./assets/img/logo.png">
+    <meta name="twitter:image" content="https://sureimprovement.online/assets/img/logo.png">
     <title>Sure Improvement - Quality Online Education and One-to-One Classes</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
@@ -449,9 +449,9 @@
         </div>
     </div>
     <div id="details-sec">
-        <div class="row text-center">
+        <div class="row">
             <div class="col-lg-12 col-md-12" data-scroll-reveal="enter from the bottom after 0.4s">
-                <h2><strong>Our Contacts and Details </strong></h2>
+                <h2><strong>Our Location </strong></h2>
                 <hr />
                 <div>
                     <h4>New Delhi</h4>
