--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                     <span style="font-size:40px;">
                         <strong> ALL INDIA </strong>
                         <hr />
-                        CLASSES AVAIABLE
+                        CLASSES AVAILABLE
                     </span>
                 </div>
             </div>
