--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                         <h4><strong>Call:</strong> +91 7254880990 </h4>
                     </a>
                     <a href="mailto:contact@sureimprovement.online">
-                        <h4><strong>Email: </strong>contact@sureimprovement.online</h4>
+                        <h4><strong>Email: </strong>sureimprovement.online@gmail.com</h4>
                     </a>
                 </div>
             </div>
@@ -470,7 +470,7 @@
     </div>
     <!-- CONTACT SECTION END-->
     <div id="footer" style="text-align: center;">
-        &copy 2023 | All Rights Reserved
+        &copy 2024 | All Rights Reserved
     </div>
     <!-- FOOTER SECTION END-->
 
