--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="class-item">
                     <div><i class="bi bi-3-circle-fill"></i></div>
                     <h3 data-scroll-reveal="enter from the left after 0.2s">Start Learning</h3>
-                    <p data-scroll-reveal="enter from the left after 0.2s">Once you are satisfied with the teacher,
+                    <p data-scroll-reveal="enter from the left after 0.2s">Once you are satisfied with the teacher.
                         Start Learning with Sure Improvement</p>
                 </div>
             </div>
