--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <div><i class="bi bi-1-circle-fill"></i></div>
                     <h3 data-scroll-reveal="enter from the left after 0.2s">Register for a Demo Class</h3>
                     <p data-scroll-reveal="enter from the left after 0.2s">Tell us what you need help with. We will
-                        connect you with an experienced teacher, and set up the
+                        connect , and set up the
                         demo class.</p>
                 </div>
                 <i class="bi bi-arrow-right"></i>
@@ -252,8 +252,7 @@
                 <div class="class-item">
                     <div><i class="bi bi-1-circle-fill"></i></div>
                     <h3 data-scroll-reveal="enter from the bottom after 0.2s">Register for a Demo Class</h3>
-                    <p data-scroll-reveal="enter from the bottom after 0.2s">Tell us what you need help with. We will
-                        connect you with an experienced teacher, and set up the
+                    <p data-scroll-reveal="enter from the bottom after 0.2s">Tell us what you need help with. We will connect, and set up the
                         demo class.</p>
                 </div>
                 <i class="bi bi-arrow-down"></i>
