--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
                 <div class="class-item">
                     <div><i class="bi bi-1-circle-fill"></i></div>
                     <h3 data-scroll-reveal="enter from the bottom after 0.2s">Register for a Demo Class</h3>
-                    <p data-scroll-reveal="enter from the bottom after 0.2s">Tell us what you need help with. We will connect, and set up the
+                    <p data-scroll-reveal="enter from the bottom after 0.2s">Tell us what you need help with. We will
+                        connect, and set up the
                         demo class.</p>
                 </div>
                 <i class="bi bi-arrow-down"></i>
@@ -373,6 +374,31 @@
 
     <section class="site-section section-counters text-center">
         <div class="container">
+            <h1>WHY SURE IMPROVEMENT ?</h1>
+            <div class="why-si">
+                <div>
+                    <h4>From foundational concepts to advanced topics, our classes are meticulously crafted to provide a
+                        well-rounded education
+                        that not only builds subject expertise but also encourages critical thinking and problem-solving
+                        skills.
+                    </h4>
+                </div>
+                <div>
+                    <h4>Join us in our commitment to delivering high-quality and transformative classes that empower
+                        students
+                        to
+                        excel
+                        academically and personally.</h4>
+                </div>
+                <div>
+                    <h4>Our institution is dedicated to providing a holistic and quality education that equips students
+                        with
+                        the
+                        knowledge and
+                        skills needed for success in both their academic and personal journeys.</h4>
+                </div>
+            </div>
+            <hr>
             <div class="row">
                 <div class="col-sm-4 col-xs-12">
                     <div style="display:flex; justify-content: center;">
@@ -399,46 +425,51 @@
     </section><!-- /.section-counters -->
 
     <div id="contact-sec">
-        <div class="overlay">
-            <div class="container set-pad">
-                <div class="row text-center">
-                    <div class="col-lg-8 col-lg-offset-2 col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
-                        <h1 data-scroll-reveal="enter from the bottom after 0.1s">REGISTER FOR DEMO CLASS</h1>
-                        <p data-scroll-reveal="enter from the bottom after 0.3s">
-                        </p>
+        <div class="container set-pad">
+            <div class="row set-row-pad" data-scroll-reveal="enter from the bottom after 0.5s">
+                <div class="col-lg-6 col-md-6 col-sm-12" data-scroll-reveal="enter from the bottom after 0.4s">
+                    <h1 class="text-center">CONTACT DETAILS</h1>
+                    <div class="contact">
+                        <h3> <strong><i class="bi bi-geo-alt-fill"></i>New Delhi</strong></h3>
+                        <a href="tel:+917834819690">
+                            <p><strong><i class="bi bi-phone-fill"></i></strong> +91 7834819690 </p>
+                        </a>
+                        <a href="tel:+917254880990">
+                            <p><strong><i class="bi bi-whatsapp"></i></strong> +91 7254880990 </p>
+                        </a>
+                        <a href="mailto:sureimprovement.online@gmail.com">
+                            <p><strong><i class="bi bi-envelope"></i></strong> sureimprovement.online@gmail.com</p>
+                        </a>
                     </div>
-
                 </div>
-                <!--/.HEADER LINE END-->
-                <div class="row set-row-pad" data-scroll-reveal="enter from the bottom after 0.5s">
-                    <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
-                        <form id="contact-form" onsubmit="sendEmail(event)">
-                            <div class="form-group">
-                                <input name="name" type="text" class="form-control " required placeholder="Your Name" />
-                            </div>
-                            <div class="form-group">
-                                <input name="phone" type="text" class="form-control " required
-                                    placeholder="Your Phone Number" />
-                            </div>
-                            <div class="form-group">
-                                <input type="text" name="email" class="form-control"
-                                    placeholder="Your Email(Optional)" />
-                            </div>
-                            <div class="form-group">
-                                <textarea name="message" required class="form-control" style="min-height: 150px;"
-                                    placeholder="Write your requirement"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-info btn-block btn-lg">SUBMIT
-                                    REQUEST</button>
-                            </div>
-                        </form>
-                    </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <h1 class="text-center" data-scroll-reveal="enter from the bottom after 0.1s">REGISTER FOR DEMO
+                        CLASS</h1>
+                    <form id="contact-form" onsubmit="sendEmail(event)">
+                        <div class="form-group">
+                            <input name="name" type="text" class="form-control " required placeholder="Your Name" />
+                        </div>
+                        <div class="form-group">
+                            <input name="phone" type="text" class="form-control " required
+                                placeholder="Your Phone Number" />
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="email" class="form-control" placeholder="Your Email(Optional)" />
+                        </div>
+                        <div class="form-group">
+                            <textarea name="message" required class="form-control" style="min-height: 150px;"
+                                placeholder="Write your requirement"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-info btn-block btn-lg"><strong>SUBMIT
+                                    REQUEST</strong></button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-    <div id="details-sec">
+    <!-- <div id="details-sec">
         <div class="row">
             <div class="col-lg-12 col-md-12" data-scroll-reveal="enter from the bottom after 0.4s">
                 <h2><strong>CONTACT DETAILS </strong></h2>
@@ -457,11 +488,14 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- CONTACT SECTION END-->
     <div id="footer" style="text-align: center;">
         &copy 2024 | All Rights Reserved
     </div>
+
+    <button onclick="location.href='#contact-sec'" class="sticky-circle-button"><i class="bi bi-chat-dots"
+            style="color: rgb(156, 213, 226);"></i></button>
     <!-- FOOTER SECTION END-->
 
     <script src="assets/js/jquery-1.10.2.js"></script>
