register, class update

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#home">HOME</a></li>
                     <li><a href="#features-sec">FEATURES</a></li>
-                    <li><a href="#faculty-sec">FACULTY</a></li>
+                    <li><a href="#classes-work">JOIN</a></li>
                     <li><a href="#course-sec">CLASS</a></li>
                     <li><a href="#contact-sec">CONTACT</a></li>
                 </ul>
@@ -287,9 +287,9 @@
             </div>
         </div>
         <div class="row text-center">
-            <div class="col-md-4 col-sm-4 " data-scroll-reveal="enter from the bottom after 0.4s">
+            <div class="col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.4s">
                 <div class="subject-container">
-                    <h2>Boards</h2>
+                    <h2>BOARDS</h2>
                     <ul>
                         <li>IB Board</li>
                         <li>ICSE Board</li>
@@ -298,13 +298,12 @@
                         <li>IGCSE Board</li>
                         <li>CISCE Board</li>
                         <li>GCSE Board</li>
-                        <li>Cambridge International Board</li>
                     </ul>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.4s">
-                <div class=" subject-container">
-                    <h2>Classes</h2>
+                <div class="subject-container">
+                    <h2>CLASSES</h2>
                     <ul>
                         <li>Class 6</li>
                         <li>Class 7</li>
@@ -317,17 +316,17 @@
                 </div>
             </div>
             <div class="col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 0.4s">
-                <div class=" subject-container">
-                    <h2>Subjects</h2>
+                <div class="subject-container subject">
+                    <h2>SUBJECTS</h2>
                     <ul>
-                        <li>Mathematics</li>
-                        <li>Science</li>
-                        <li>Social Science</li>
-                        <li>English</li>
-                        <li>Physics</li>
-                        <li>Chemistry</li>
-                        <li>Biology</li>
-                        <li>Computer Science</li>
+                        <li><i class="bi bi-percent"></i>Mathematics</li>
+                        <li><i class="bi bi-activity"></i>Science</li>
+                        <li><i class="bi bi-globe-central-south-asia"></i>Social Science</li>
+                        <li><i class="bi bi-laptop"></i>Computer Science</li>
+                        <li><i class="bi bi-alphabet"></i>English</li>
+                        <li><i class="bi bi-lightning-charge-fill"></i>Physics</li>
+                        <li><i class="bi bi-thermometer-sun"></i>Chemistry</li>
+                        <li><i class="bi bi-lungs-fill"></i>Biology</li>
                     </ul>
                 </div>
             </div>
@@ -376,7 +375,7 @@
         <div class="container">
             <h1>WHY SURE IMPROVEMENT ?</h1>
             <div class="why-si">
-                <div>
+                <!-- <div>
                     <h4>From foundational concepts to advanced topics, our classes are meticulously crafted to provide a
                         well-rounded education
                         that not only builds subject expertise but also encourages critical thinking and problem-solving
@@ -389,7 +388,7 @@
                         to
                         excel
                         academically and personally.</h4>
-                </div>
+                </div> -->
                 <div>
                     <h4>Our institution is dedicated to providing a holistic and quality education that equips students
                         with
@@ -427,21 +426,7 @@
     <div id="contact-sec">
         <div class="container set-pad">
             <div class="row set-row-pad" data-scroll-reveal="enter from the bottom after 0.5s">
-                <div class="col-lg-6 col-md-6 col-sm-12" data-scroll-reveal="enter from the bottom after 0.4s">
-                    <h1 class="text-center">CONTACT DETAILS</h1>
-                    <div class="contact">
-                        <h3> <strong><i class="bi bi-geo-alt-fill"></i>New Delhi</strong></h3>
-                        <a href="tel:+917834819690">
-                            <p><strong><i class="bi bi-phone-fill"></i></strong> +91 7834819690 </p>
-                        </a>
-                        <a href="tel:+917254880990">
-                            <p><strong><i class="bi bi-whatsapp"></i></strong> +91 7254880990 </p>
-                        </a>
-                        <a href="mailto:sureimprovement.online@gmail.com">
-                            <p><strong><i class="bi bi-envelope"></i></strong> sureimprovement.online@gmail.com</p>
-                        </a>
-                    </div>
-                </div>
+
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <h1 class="text-center" data-scroll-reveal="enter from the bottom after 0.1s">REGISTER FOR DEMO
                         CLASS</h1>
@@ -465,6 +450,21 @@
                                     REQUEST</strong></button>
                         </div>
                     </form>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12" data-scroll-reveal="enter from the bottom after 0.4s">
+                    <h1 class="text-center">CONTACT DETAILS</h1>
+                    <div class="contact text-center">
+                        <h3> <strong><i class="bi bi-geo-alt-fill"></i>New Delhi</strong></h3>
+                        <a href="tel:+917834819690">
+                            <p><strong><i class="bi bi-telephone"></i></strong> +91 7834819690 </p>
+                        </a>
+                        <a href="tel:+917254880990">
+                            <p><strong><i class="bi bi-whatsapp"></i></strong> +91 7254880990 </p>
+                        </a>
+                        <a href="mailto:sureimprovement.online@gmail.com">
+                            <p><strong><i class="bi bi-envelope"></i></strong> sureimprovement.online@gmail.com</p>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
