some fixes in register, feature list and whys

--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
                         <li>IGCSE Board</li>
                         <li>CISCE Board</li>
                         <li>GCSE Board</li>
+                        <li>State Board</li>
                     </ul>
                 </div>
             </div>
@@ -312,6 +313,7 @@
                         <li>Class 10</li>
                         <li>Class 11</li>
                         <li>Class 12</li>
+                        <li>Other Exam</li>
                     </ul>
                 </div>
             </div>
@@ -373,7 +375,7 @@
 
     <section class="site-section section-counters text-center">
         <div class="container">
-            <h1>WHY SURE IMPROVEMENT ?</h1>
+            <h1 class="header-line">WHY SURE IMPROVEMENT ?</h1>
             <div class="why-si">
                 <!-- <div>
                     <h4>From foundational concepts to advanced topics, our classes are meticulously crafted to provide a
@@ -425,21 +427,20 @@
 
     <div id="contact-sec">
         <div class="container set-pad">
-            <div class="row set-row-pad" data-scroll-reveal="enter from the bottom after 0.5s">
+            <div class="row gx-5" data-scroll-reveal="enter from the bottom after 0.5s">
 
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <h1 class="text-center" data-scroll-reveal="enter from the bottom after 0.1s">REGISTER FOR DEMO
                         CLASS</h1>
                     <form id="contact-form" onsubmit="sendEmail(event)">
                         <div class="form-group">
-                            <input name="name" type="text" class="form-control " required placeholder="Your Name" />
+                            <input name="name" type="text" class="form-control " required placeholder="Name" />
                         </div>
                         <div class="form-group">
-                            <input name="phone" type="text" class="form-control " required
-                                placeholder="Your Phone Number" />
+                            <input name="phone" type="text" class="form-control " required placeholder="Phone Number" />
                         </div>
                         <div class="form-group">
-                            <input type="text" name="email" class="form-control" placeholder="Your Email(Optional)" />
+                            <input type="text" name="email" class="form-control" placeholder="Email(Optional)" />
                         </div>
                         <div class="form-group">
                             <textarea name="message" required class="form-control" style="min-height: 150px;"
