--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <h1 data-scroll-reveal="enter from the bottom after 0.2s" class="header-line">HOW OUR CLASSES WORK</h1>
 
         <div style="text-align: center;">
-            <div class="classes-container">
+            <div class="classes-container text-center">
                 <div class="class-item">
                     <div><i class="bi bi-1-circle-fill"></i></div>
                     <h3 data-scroll-reveal="enter from the left after 0.2s">Register for a Demo Class</h3>
