featuer list gap fixed

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <!--/.HEADER LINE END-->
 
             <div class="card-container">
-                <div class="row set-row-pad">
+                <div class="row">
                     <div class="col-md-4 col-4">
                         <div class="card">
                             <i class="fa fa-paper-plane-o fa-4x"></i>
