register for demo and contact details text change by class  header line

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 </div>
             </div>
             <a href="#contact-sec" class="btn btn-info btn-lg">
-                REGISTER FOR DEMO CLASS
+                <strong>REGISTER FOR DEMO CLASS</strong>
             </a>
         </div>
     </div>
@@ -430,7 +430,8 @@
             <div class="row gx-5" data-scroll-reveal="enter from the bottom after 0.5s">
 
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h1 class="text-center" data-scroll-reveal="enter from the bottom after 0.1s">REGISTER FOR DEMO
+                    <h1 class="text-center" class="header-line" data-scroll-reveal="enter from the bottom after 0.1s">
+                        REGISTER FOR DEMO
                         CLASS</h1>
                     <form id="contact-form" onsubmit="sendEmail(event)">
                         <div class="form-group">
@@ -453,9 +454,9 @@
                     </form>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12" data-scroll-reveal="enter from the bottom after 0.4s">
-                    <h1 class="text-center">CONTACT DETAILS</h1>
+                    <h1 class="text-center" class="header-line">CONTACT DETAILS</h1>
                     <div class="contact text-center">
-                        <h3> <strong><i class="bi bi-geo-alt-fill"></i>New Delhi</strong></h3>
+                        <p> <strong><i class="bi bi-geo-alt-fill"></i>New Delhi, India</strong></p>
                         <a href="tel:+917834819690">
                             <p><strong><i class="bi bi-telephone"></i></strong> +91 7834819690 </p>
                         </a>
