--- a/index.html
+++ b/index.html
@@ -425,52 +425,59 @@
         </div>
     </section><!-- /.section-counters -->
 
-    <div id="contact-sec">
-        <div class="container set-pad">
-            <div class="row gx-5" data-scroll-reveal="enter from the bottom after 0.5s">
 
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                    <h1 class="text-center" class="header-line" data-scroll-reveal="enter from the bottom after 0.1s">
-                        REGISTER FOR DEMO
-                        CLASS</h1>
-                    <form id="contact-form" onsubmit="sendEmail(event)">
-                        <div class="form-group">
-                            <input name="name" type="text" class="form-control " required placeholder="Name" />
+    <section id="contact-sec" style="padding-top: 50px;">
+        <div>
+            <div class="container set-pad">
+                <div class="row gx-5" data-scroll-reveal="enter from the bottom after 0.5s">
+
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <h1 class="text-center" class="header-line"
+                            data-scroll-reveal="enter from the bottom after 0.1s">
+                            REGISTER FOR DEMO
+                            CLASS</h1>
+                        <form id="contact-form" onsubmit="sendEmail(event)">
+                            <div class="form-group">
+                                <input name="name" type="text" class="form-control " required placeholder="Name" />
+                            </div>
+                            <div class="form-group">
+                                <input name="phone" type="text" class="form-control " required
+                                    placeholder="Phone Number" />
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="email" class="form-control" placeholder="Email(Optional)" />
+                            </div>
+                            <div class="form-group">
+                                <textarea name="message" required class="form-control" style="min-height: 150px;"
+                                    placeholder="Write your requirement"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-info btn-block btn-lg"><strong>SUBMIT
+                                        REQUEST</strong></button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12" data-scroll-reveal="enter from the bottom after 0.4s">
+                        <h1 class="text-center" class="header-line">CONTACT DETAILS</h1>
+                        <div class="contact text-center">
+                            <a>
+                                <p> <strong><i class="bi bi-geo-alt-fill"></i>New Delhi, India</strong></p>
+                            </a>
+                            <a href="tel:+917834819690">
+                                <p><strong><i class="bi bi-telephone"></i></strong> +91 7834819690 </p>
+                            </a>
+                            <a href="tel:+917254880990">
+                                <p><strong><i class="bi bi-whatsapp"></i></strong> +91 7254880990 </p>
+                            </a>
+                            <a href="mailto:sureimprovement.online@gmail.com">
+                                <p><strong><i class="bi bi-envelope"></i></strong> sureimprovement.online@gmail.com</p>
+                            </a>
                         </div>
-                        <div class="form-group">
-                            <input name="phone" type="text" class="form-control " required placeholder="Phone Number" />
-                        </div>
-                        <div class="form-group">
-                            <input type="text" name="email" class="form-control" placeholder="Email(Optional)" />
-                        </div>
-                        <div class="form-group">
-                            <textarea name="message" required class="form-control" style="min-height: 150px;"
-                                placeholder="Write your requirement"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" class="btn btn-info btn-block btn-lg"><strong>SUBMIT
-                                    REQUEST</strong></button>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12" data-scroll-reveal="enter from the bottom after 0.4s">
-                    <h1 class="text-center" class="header-line">CONTACT DETAILS</h1>
-                    <div class="contact text-center">
-                        <p> <strong><i class="bi bi-geo-alt-fill"></i>New Delhi, India</strong></p>
-                        <a href="tel:+917834819690">
-                            <p><strong><i class="bi bi-telephone"></i></strong> +91 7834819690 </p>
-                        </a>
-                        <a href="tel:+917254880990">
-                            <p><strong><i class="bi bi-whatsapp"></i></strong> +91 7254880990 </p>
-                        </a>
-                        <a href="mailto:sureimprovement.online@gmail.com">
-                            <p><strong><i class="bi bi-envelope"></i></strong> sureimprovement.online@gmail.com</p>
-                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- <div id="details-sec">
         <div class="row">
             <div class="col-lg-12 col-md-12" data-scroll-reveal="enter from the bottom after 0.4s">
