nav collapse after click on menu item

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             </div>
             <div class="navbar-collapse collapse move-me">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#features-sec">FEATURES</a></li>
-                    <li><a href="#classes-work">JOIN</a></li>
-                    <li><a href="#course-sec">CLASS</a></li>
-                    <li><a href="#contact-sec">CONTACT</a></li>
+                    <li><a data-target=".navbar-collapse" data-toggle="collapse" href="#home">HOME</a></li>
+                    <li><a data-target=".navbar-collapse" data-toggle="collapse" href="#features-sec">FEATURES</a></li>
+                    <li><a data-target=".navbar-collapse" data-toggle="collapse" href="#classes-work">JOIN</a></li>
+                    <li><a data-target=".navbar-collapse" data-toggle="collapse" href="#course-sec">CLASS</a></li>
+                    <li><a data-target=".navbar-collapse" data-toggle="collapse" href="#contact-sec">CONTACT</a></li>
                 </ul>
             </div>
         </div>
