subtitle added after title in team head

--- a/index.html
+++ b/index.html
@@ -351,8 +351,9 @@
                         <h3>Munna Kumar Verma </h3>
                         <hr />
                         <h4>Founder</h4>
-                        <p>
-                        </p>
+                        <h4>
+                            Ex-Navodayan
+                        </h4>
                     </div>
                 </div>
                 <div class="col-lg-6  col-md-6 col-sm-6" data-scroll-reveal="enter from the bottom after 0.6s">
@@ -361,8 +362,10 @@
                         <h3>Deepak Kumar</h3>
                         <hr />
                         <h4>Co-Founder</h4>
-                        <p>
-                        </p>
+                        <h4>
+                            Software Developer <a href="https://ideepakrajput.github.io/"><i class="bi bi-link-45deg"
+                                    style="font-size: 24px; ;"></i></a>
+                        </h4>
                     </div>
                 </div>
 
