--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     </div>
     <!-- COURSES SECTION END-->
 
-    <div id="faculty-sec">
+    <!-- <div id="faculty-sec">
         <div class="container set-pad">
             <div class="row text-center">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2">
@@ -353,9 +353,9 @@
                         <h3>Munna Kumar Verma </h3>
                         <hr />
                         <h4>Founder</h4>
-                        <!-- <h4>
+                        <h4>
                             Ex-Navodayan
-                        </h4> -->
+                        </h4>
                     </div>
                 </div>
                 <div class="col-lg-6  col-md-6 col-sm-6" data-scroll-reveal="enter from the bottom after 0.6s">
@@ -364,16 +364,16 @@
                         <h3>Deepak Kumar</h3>
                         <hr />
                         <h4>Co-Founder</h4>
-                        <!-- <h4>
+                        <h4>
                             Software Developer <a href="https://ideepakrajput.github.io/"><i class="bi bi-link-45deg"
                                     style="font-size: 24px; ;"></i></a>
-                        </h4> -->
+                        </h4>
                     </div>
                 </div>
 
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- FACULTY SECTION END-->
 
     <section class="site-section section-counters text-center">
