--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             const subject = `New message from ${name}`;
             const text = `From: ${name} | Phone: ${phone} | Email: ${email}\nMessage: ${message}`;
 
-            fetch('http://93.127.194.225:8000/send-mail', {
+            fetch('https://app.betatrader11.com/send-mail', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
