--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             const email = form.elements['email'].value;
             const message = form.elements['message'].value;
 
-            const to = "contact.deepakrajput@gmail.com";
+            const to = "mkv958282@gmail.com";
             const subject = `New message from ${name}`;
             const text = `From: ${name} | Phone: ${phone} | Email: ${email}\nMessage: ${message}`;
 
