Course Details pdf updated

--- a/index.html
+++ b/index.html
@@ -285,10 +285,8 @@
             <div class="col-md-6">
                 <img src="./assets/img/react_native_course.png" alt="React Native Course" class="course-img"
                     onclick="sendWhatsAppMessage('React Native: Novice to Pro!')">
-                <h3>Master React Native: Novice to Pro!</h3>
-                <p>Learn to build dynamic mobile apps from scratch. Personalized instruction with real-world projects.
-                </p>
-                <div class="text-center">
+                    <h3 class="text-center" style="margin-bottom: 20px;"><a href="./courses/React Native Course.pdf">Course Details</a></h3>
+                <div class="text-center" style="margin-bottom: 20px;">
                     <a class="icon" href="https://linkedin.com/in/ideepakrajput/"><i class="bi bi-linkedin"></i></a>
                     <a class="icon" href="https://ideepakrajput.github.io/"><i class="bi bi-link-45deg"></i></a>
                     <a class="icon" href="https://github.com/ideepakrajput"><i class="bi bi-github"></i></a>
@@ -299,9 +297,8 @@
             <div class="col-md-6">
                 <img src="./assets/img/Web_Dev_Couse.png" alt="Web Development Course" class="course-img"
                     onclick="sendWhatsAppMessage('Web Development: From Novice to Pro!')">
-                <h3>Master Web Development: From Novice to Pro!</h3>
-                <p>Transform your skills with comprehensive curriculum and expert-led instruction. Start today!</p>
-                <div class="text-center">
+                    <h3 class="text-center" style="margin-bottom: 20px;"><a href="./courses/Web Development Course.pdf">Course Details</a></h3>
+                <div class="text-center" style="margin-bottom: 20px;">
                     <a class="icon" href="https://linkedin.com/in/ideepakrajput/"><i class="bi bi-linkedin"></i></a>
                     <a class="icon" href="https://ideepakrajput.github.io/"><i class="bi bi-link-45deg"></i></a>
                     <a class="icon" href="https://github.com/ideepakrajput"><i class="bi bi-github"></i></a>
@@ -312,10 +309,9 @@
             <div class="col-md-6">
                 <img src="./assets/img/php_course.png" alt="Java Programming Course" class="course-img"
                     onclick="sendWhatsAppMessage('Master PHP and MySQL for Web Development!')">
-                <h3>Master PHP and MySQL for Web Development!</h3>
-                <p>Learn PHP and MySQL for web development. Build dynamic websites with hands-on projects.
-                </p>
-                <div class="text-center">
+                <h3 class="text-center" style="margin-bottom: 20px;"><a href="./courses/MySQL PHP Course.pdf">Course
+                        Details</a></h3>
+                <div class="text-center" style="margin-bottom: 20px;">
                     <a class="icon" href="https://linkedin.com/in/ideepakrajput/"><i class="bi bi-linkedin"></i></a>
                     <a class="icon" href="https://ideepakrajput.github.io/"><i class="bi bi-link-45deg"></i></a>
                     <a class="icon" href="https://github.com/ideepakrajput"><i class="bi bi-github"></i></a>
@@ -326,10 +322,9 @@
             <div class="col-md-6">
                 <img src="./assets/img/python_course.png" alt="Python Programming Course" class="course-img"
                     onclick="sendWhatsAppMessage('Python Programming!')">
-                <h3>Master Python Programming!</h3>
-                <p>From beginner to advanced coding, build a portfolio with hands-on projects. Learn at your own pace.
-                </p>
-                <div class="text-center">
+                <h3 class="text-center" style="margin-bottom: 20px;"><a href="./courses/Python Course.pdf">Course
+                        Details</a></h3>
+                <div class="text-center" style="margin-bottom: 20px;">
                     <a class="icon" href="https://linkedin.com/in/ideepakrajput/"><i class="bi bi-linkedin"></i></a>
                     <a class="icon" href="https://ideepakrajput.github.io/"><i class="bi bi-link-45deg"></i></a>
                     <a class="icon" href="https://github.com/ideepakrajput"><i class="bi bi-github"></i></a>
